src/scss/main.scss
@import "o-buttons/main";
@import "o-colors/main";
@import "o-overlay/main";
@import "o-visual-effects/main";
@import "o-message/main";

.n-syndication-icon {
	@include oIconsContent(
		$icon-name: "cross",
		$color: oColorsByName("white"),
		$size: 20
	);
	background-color: rgba(oColorsByName("slate"), 0.55);
	border-color: transparent;
	border-radius: 20px;
	border-width: 0;
	cursor: pointer;
	display: inline-block;
	height: 20px;
	margin-right: 2px;
	vertical-align: text-top;
	width: 20px;
}

.n-syndication-icon.n-syndication-icon-state-no,
.n-syndication-icon.n-syndication-icon-state-verify,
.n-syndication-icon.n-syndication-icon-state-withcontributorpayment,
.n-syndication-icon.n-syndication-icon-state-yes {
	vertical-align: text-top;
}

.n-syndication-icon-state-msg_4000,
.n-syndication-icon-state-msg_4050,
.n-syndication-icon-state-msg_5000,
.n-syndication-icon-state-msg_5100,
.n-syndication-icon-state-no {
	@include oIconsContent(
		$icon-name: "cross",
		$color: oColorsByName("white"),
		$size: 20,
		$include-base-styles: false
	);
	background-color: rgba(oColorsByName("claret"), 0.85);
}

.n-syndication-icon-state-msg_2000,
.n-syndication-icon-state-msg_2100,
.n-syndication-icon-state-msg_4100,
.n-syndication-icon-state-msg_4300,
.n-syndication-icon-state-yes {
	@include oIconsContent(
		$icon-name: "tick",
		$color: oColorsByName("white"),
		$size: 20,
		$include-base-styles: false
	);
	background-color: rgba(oColorsByName("jade"), 0.85);
}

.n-syndication-icon-state-msg_2300,
.n-syndication-icon-state-msg_2320,
.n-syndication-icon-state-msg_2340,
.n-syndication-icon-state-withcontributorpayment {
	@include oIconsContent(
		$icon-name: "dollar",
		$color: oColorsByName("white"),
		$size: 20,
		$include-base-styles: false
	);
	background-color: rgba(oColorsByName("jade"), 0.85);
}

.n-syndication-icon-state-msg_2200,
.n-syndication-icon-state-msg_4200,
.n-syndication-icon-state-msg_4250,
.n-syndication-icon-state-verify {
	@include oIconsContent(
		$icon-name: "minus",
		$color: oColorsByName("white"),
		$size: 20,
		$include-base-styles: false
	);
	background-color: rgba(oColorsByName("mandarin"), 0.85);
}

.n-syndication-icon-state-maintenance {
	background-image: none;
}

.o-teaser--top-story .n-syndication-icon,
.o-topper__headline .n-syndication-icon {
	border-radius: 26px;
	height: 26px;
	vertical-align: baseline;
	width: 26px;
}

.hero__heading .n-syndication-icon,
.o-teaser--hero .n-syndication-icon,
.o-teaser--large .n-syndication-icon,
.o-teaser--large-portrait .n-syndication-icon,
.video-scroller__item-large .o-teaser--stacked .n-syndication-icon,
.video__description .video__title .n-syndication-icon {
	border-radius: 24px;
	height: 24px;
	vertical-align: baseline;
	width: 24px;
}

.o-teaser__related .o-teaser__related-item .n-syndication-icon {
	border-radius: 16px;
	height: 16px;
	width: 16px;
}

.hero__heading .n-syndication-icon {
	vertical-align: baseline;
}

// modal
.n-syndication-modal-shadow {
	background-color: rgba(0, 0, 0, 0.2);
	position: fixed;
	height: 150%; // because on some phones scrolling upwards detaches a 100% height overlay from the bottom of the screen
	width: 100%;
	top: 0;
	left: 0;
	z-index: 10;
	opacity: 1;
	transition: opacity 0.3s ease-in-out;
}
.n-syndication-modal {
	@include oVisualEffectsShadowContent($elevation: "high");
	position: fixed;
	z-index: 10;
	box-sizing: border-box;
	opacity: 1;
	transition: opacity 0.3s ease-in-out;
	border: $_o-overlay-border-width solid _oOverlayGet("default-border");
	background: _oOverlayGet("default-background");

	min-height: 160px;
	max-width: 420px;
	min-width: 360px;
	//position: absolute;
	z-index: 1000;
}
.n-syndication-modal-heading {
	font-size: 20px;
	margin: 0;
	overflow: hidden;
	background: _oOverlayGet("heading-background");
	color: _oOverlayGet("heading-text");
}
.n-syndication-modal-close {
	@include oIconsContent(
		$icon-name: "cross",
		$color: oColorsByName("white"),
		$size: 20
	);
	background-size: contain;

	border-width: 0;
	box-sizing: content-box;
	float: right;
	position: relative;
	margin-top: 10px; // Align with the text baseline (magic number)
	margin-right: 10px; // Same right spacing as the top one
	margin-left: 10px;
	margin-bottom: 10px;
	width: 20px;
	height: 20px;
	padding: 0.25em;
	// Equivalent to `50%`, but avoids a rendering bug in old WebKit
	border-radius: 9999px;
	cursor: pointer;
	font-size: 8px;
	line-height: 1;
	user-select: none;
	outline: none; // Remove focus ring (focus state is set below)

	// Increase hit zone of the button around it for better usability
	&:after {
		position: absolute;
		content: "";
		top: -10px;
		right: -10px;
		left: -10px;
		bottom: -10px;
	}
}
.n-syndication-modal-title {
	margin: 10px 10px 10px 20px;
	display: block;
	line-height: 25px;
	overflow: auto;

	font-family: "financier display", "times new roman", serif;
	font-size: 24px;
	font-weight: normal;
	line-height: 26px;
}
.n-syndication-modal-word-count {
	color: rgba(oColorsByName("black"), 0.4);
	font-family: metric, arial, sans-serif;
	font-size: 16px;
	font-weight: normal;
}
.n-syndication-modal-content {
	position: relative;
	box-sizing: border-box;
	overflow: auto;
	padding: 20px;

	> *:first-child {
		margin-top: 0;
	}

	> *:last-child {
		margin-bottom: 0;
	}

	padding-top: 0;
}

.n-syndication-modal-message,
.n-syndication-modal-message p {
	color: rgba(oColorsByName("black"), 0.8);
	font-family: metric, arial, sans-serif;
	font-size: 14px;
	line-height: 20px;
}

.n-syndication-actions {
	text-align: right;
}
.n-syndication-action {
	@include oButtons(
		$opts: (
			"type": "secondary"
		)
	);
}
.n-syndication-action-primary {
	@include oButtons(
		$opts: (
			"type": "primary"
		)
	);
}
.n-syndication-action,
.n-syndication-action-primary {
	min-width: 120px;
	text-align: center;
}

.n-syndication-republishing {
	background-color: rgba(oColorsByName("claret"), 1);
	color: oColorsByName("white");
	font-weight: bold;
}

.o-header__nav-item .n-syndication-republishing {
	padding-left: 12px;
	padding-right: 12px;

	&:hover {
		color: oColorsByName("white");

		&:after {
			background-color: oColorsByName("white");
		}
	}
}

.o-header__drawer-menu-item .n-syndication-republishing {
	background-color: rgba(oColorsByName("claret"), 0.75);
	transition: all 250ms ease-in-out;

	&:hover {
		background-color: rgba(oColorsByName("claret"), 1);
		color: oColorsByName("white");
	}
}

.n-syndication-modal-message .syndication-message__content--warning {
	color: oColorsByName("crimson");
	font-weight: 600;
}

.n-syndication-rich-content-message {
	margin-bottom: 1vh;
}

.o-message__content .o-message__content-main .n-syndication-rich-message_content-highlight {
	font-weight: 400;
}

